# NeuralNetwork-v251209

./: .gitignore  pyproject.toml
example/: 2d_viz.py  moons.py  xor.py
nn/: __init__.py  activation.py  loss.py  nn.py  train.py
